# discordbot

./: .gitignore  Cargo.toml  flake.nix  readme.md
macros/: Cargo.toml
macros/src/: lib.rs
main/: Cargo.toml  build.rs
main/src/: lib.rs  main.rs
main/src/client/: command_registering.rs  commands.rs  mod.rs
main/src/client/data/: commands.rs  environment.rs  extras.rs  mod.rs  pagination.rs  permissions.rs  prefixes.rs  snipes.rs  user_afk.rs  voice_master.rs
main/src/client/processes/: mod.rs  pagination.rs
main/src/commands/: example.rs  mod.rs
main/src/commands/fun/: mod.rs
main/src/commands/server/: mod.rs
main/src/commands/server/moderation/: clear_snipe.rs  edit_snipe.rs  mod.rs  reaction_history.rs  reaction_snipe.rs  snipe.rs
main/src/commands/server/settings/: mod.rs  prefix.rs
main/src/commands/utilities/: mod.rs
main/src/commands/utilities/custom_commands/: mod.rs  page_test.rs
main/src/commands/utilities/information/: afk.rs  avatar.rs  banner.rs  channel.rs  guild.rs  info.rs  mod.rs  ping.rs  serverinfo.rs
main/src/events/: guild.rs  interaction.rs  message.rs  mod.rs  reaction.rs  state.rs  voice.rs
main/src/events/commands/: message.rs  mod.rs
main/src/events/commands/interactions/: autocomplete.rs  command.rs  component.rs  mod.rs  modal.rs  ping.rs
main/src/events/help/: mod.rs
main/src/events/misc/: mod.rs  voice_master.rs
main/src/events/ready/: command_registering.rs  mod.rs  websocket.rs
main/src/events/user_afk/: mod.rs
main/src/handler/: mod.rs
main/src/handler/commands/: message.rs  mod.rs
main/src/handler/commands/interactions/: autocomplete.rs  command.rs  component.rs  mod.rs  modal.rs  ping.rs
main/src/handler/extras/: mod.rs
main/src/handler/ready/: mod.rs
main/src/handler/snipes/: mod.rs
main/src/handler/user_afk/: mod.rs
main/src/handler/voice/: mod.rs  voice_master.rs
main/src/lavalink/: end.rs  exception.rs  mod.rs  ready.rs  start.rs  stats.rs  stuck.rs  update.rs
main/src/misc/: environment.rs  mod.rs
main/src/websocket/: mod.rs
utils/: Cargo.toml
utils/src/: commands.rs  hash.rs  lib.rs  logging.rs  pagination.rs  parser.rs  permissions.rs
