
[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
codegen-units = 1
strip = "symbols"
panic = "abort"
lto = "fat"
debug = false
incremental = false

[workspace]
members = [ 
    "main", "utils", "macros"
]
default-members = ["main"]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
colored  = { version = "3" }
chalk = { version = "0.1" }
regex = "1"
dashmap = "6.1.0"


[workspace.dependencies.tokio]
version = "1"
features = ['macros', 'sync', 'time', 'rt-multi-thread']
default-features = false

[workspace.dependencies.serenity]
version = "0.12.4"
default-features = false
features=[
    'rustls_backend', 
    "chrono",
    "builder",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "voice",
    "cache",
]